--- a/app/uploadcare/templates/menu.html
+++ b/app/uploadcare/templates/menu.html
@@ -1,40 +1,42 @@
 {% url 'project_info' as project_info %}
+{% url 'file_list' as file_list %}
 
 <ul class="nav nav-pills flex-column">
-  <li class="nav-item">
-    <a class="nav-link {% if request.path == project_info %} active {% endif %}" href="{% url 'project_info' %}">Project Info</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Files</a>
-  </li>
-  <li class="nav-item">
-     <a class="nav-link" href="#">Upload file</a>
-  </li>
-  <li class="nav-item">
-     <a class="nav-link" href="#">Upload file from URL</a>
-  </li>
+    <li class="nav-item">
+        <a class="nav-link {% if request.path == project_info %} active {% endif %}" href="{% url 'project_info' %}">Project
+            Info</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link {% if request.path == file_list %} active {% endif %}" href="{% url 'file_list' %}">Files</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">Upload file</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">Upload file from URL</a>
+    </li>
 
-  <li class="dropdown-divider"></li>
+    <li class="dropdown-divider"></li>
 
-  <li class="nav-item">
-     <a class="nav-link" href="#">Groups list</a>
-  </li>
-  <li class="nav-item">
-     <a class="nav-link" href="#">Create group</a>
-  </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">Groups list</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">Create group</a>
+    </li>
 
-  <li class="dropdown-divider"></li>
+    <li class="dropdown-divider"></li>
 
-  <li class="nav-item">
-     <a class="nav-link" href="#">Convert document</a>
-  </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">Convert document</a>
+    </li>
 
-  <li class="dropdown-divider"></li>
+    <li class="dropdown-divider"></li>
 
-  <li class="nav-item">
-     <a class="nav-link" href="#">List of project webhooks</a>
-  </li>
-  <li class="nav-item">
-     <a class="nav-link" href="#">Create new webhook</a>
-  </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">List of project webhooks</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">Create new webhook</a>
+    </li>
 </ul>
