--- a/app/uploadcare/templates/files/file_list.html
+++ b/app/uploadcare/templates/files/file_list.html
@@ -20,6 +20,7 @@
                 <select class="form-control col-auto" name="action">
                     <option value="store">Store</option>
                     <option value="delete">Delete</option>
+                    <option value="create_group">Create file group</option>
                 </select>
                 <button class="btn btn-outline-secondary col-auto" type="submit">Submit</button>
 
