--- a/app/uploadcare/templates/menu.html
+++ b/app/uploadcare/templates/menu.html
@@ -1,28 +1,23 @@
 {% url 'project_info' as project_info %}
 {% url 'file_list' as file_list %}
+{% url 'group_list' as group_list %}
+{% url 'group_create' as group_create %}
 
 <ul class="nav nav-pills flex-column">
     <li class="nav-item">
-        <a class="nav-link {% if request.path == project_info %} active {% endif %}" href="{% url 'project_info' %}">Project
-            Info</a>
+        <a class="nav-link {% if request.path == project_info %} active {% endif %}" href="{{ project_info }}">Project</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link {% if request.path == file_list %} active {% endif %}" href="{% url 'file_list' %}">Files</a>
+        <a class="nav-link {% if request.path == file_list %} active {% endif %}" href="{{ file_list }}">Files</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link {% if request.path == group_list %} active {% endif %}" href="{{ group_list }}">Groups</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="#">Upload file</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="#">Upload file from URL</a>
-    </li>
-
-    <li class="dropdown-divider"></li>
-
-    <li class="nav-item">
-        <a class="nav-link" href="#">Groups list</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="#">Create group</a>
     </li>
 
     <li class="dropdown-divider"></li>
