--- a/app/uploadcare/templates/groups/group_list.html
+++ b/app/uploadcare/templates/groups/group_list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Groups list{% endblock %}
+{% block title %}Groups{% endblock %}
 
 {% block body %}
     <div class="card">
