--- a/app/uploadcare/templates/files/file_upload.html
+++ b/app/uploadcare/templates/files/file_upload.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 {% block title %} Upload file {% endblock %}
 {% block body %}
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form|crispy }}
         <button class="btn btn-primary" type="submit">Upload file</button>
     </form>
 {% endblock %}
