--- a/app/uploadcare/templates/base.html
+++ b/app/uploadcare/templates/base.html
@@ -29,15 +29,11 @@
             <div class="container w-100">
                 <h1 class="d-flex justify-content-between">{% block title %}{% endblock %}
                 </h1>
-
-                {% for type,messages in app.session.flashBag.all %}
-                    {% for message in messages %}
-                        <div class="alert alert-{{ type }}" role="alert">
-                            {{ message }}
-                        </div>
-                    {% endfor %}
-                {% endfor %}
-
+                {% if messages %}
+                        {% for message in messages %}
+                            <div class="alert {{ message.tags }}" role="alert">{{ message }}</div>
+                        {% endfor %}
+                {% endif %}
                 {% block body %}{% endblock %}
             </div>
         </main>
