--- a/app/uploadcare/templates/webhooks/webhook_create.html
+++ b/app/uploadcare/templates/webhooks/webhook_create.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 {% block title %}Create webhook{% endblock %}
 
 {% block body %}
@@ -6,7 +7,7 @@
     <div class="card-body">
       <form method="POST">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form|crispy }}
         <button class="btn btn-primary" type="submit">Create</button>
     </form>
     </div>
