--- a/app/uploadcare/templates/menu.html
+++ b/app/uploadcare/templates/menu.html
@@ -4,6 +4,7 @@
 {% url 'group_create' as group_create %}
 {% url 'webhook_list' as webhook_list %}
 {% url 'video_conversion_request' as video_conversion_request %}
+{% url 'document_conversion_request' as document_conversion_request %}
 
 <ul class="nav nav-pills flex-column">
     <li class="nav-item">
@@ -23,6 +24,8 @@
     <li class="nav-item">
         <a class="nav-link {% if request.path == video_conversion_request %} active {% endif %}" href="{{ video_conversion_request }}">Convert video</a>
     </li>
-
+    <li class="nav-item">
+        <a class="nav-link {% if request.path == document_conversion_request %} active {% endif %}" href="{{ document_conversion_request }}">Convert document</a>
+    </li>
     <li class="dropdown-divider"></li>
 </ul>
