--- a/app/uploadcare/templates/files/file_info.html
+++ b/app/uploadcare/templates/files/file_info.html
@@ -21,5 +21,7 @@
     {% include 'files/_video_info.html' %}
   {% endif %}
 
+  {% include 'files/_metadata_info.html' %}
+
   <a class="btn btn-danger" href="{% url 'delete_file' file.uuid %}">Delete file</a>
 {% endblock %}
