templates and views for flow addon request-status-results with appdata for extended results representation

--- a/app/uploadcare/templates/groups/group_info.html
+++ b/app/uploadcare/templates/groups/group_info.html
@@ -45,4 +45,6 @@
         {% endif %}
     {% endfor %}
 
+    <a href="{% url 'group_delete' group.id %}" class="btn btn-danger btn-sm">Delete</a>
+
 {% endblock %}
