--- a/app/uploadcare/templates/files/file_info.html
+++ b/app/uploadcare/templates/files/file_info.html
@@ -21,6 +21,10 @@
     {% include 'files/_video_info.html' %}
   {% endif %}
 
+  {% if file.info.appdata %}
+    {% include 'files/_common_appdata.html' %}
+  {% endif %}
+
   {% include 'files/_metadata_info.html' %}
 
   <a class="btn btn-danger" href="{% url 'delete_file' file.uuid %}">Delete file</a>
