UCM-17: [UCM-1, UCM-2, UCM-3] templates and views for flow addon request-status-results with appdata for extended results representation

--- a/app/uploadcare/templates/files/file_info.html
+++ b/app/uploadcare/templates/files/file_info.html
@@ -21,5 +21,9 @@
     {% include 'files/_video_info.html' %}
   {% endif %}
 
+  {% if file.info.appdata %}
+    {% include 'files/_common_appdata.html' %}
+  {% endif %}
+
   <a class="btn btn-danger" href="{% url 'delete_file' file.uuid %}">Delete file</a>
 {% endblock %}
