--- a/app/uploadcare/templates/files/file_info.html
+++ b/app/uploadcare/templates/files/file_info.html
@@ -13,11 +13,11 @@
     {% include 'files/_common_info.html' %}
   </div>
 
-  {% if file.info.image_info %}
+  {% if file.info.content_info.image %}
     {% include 'files/_image_info.html' %}
   {% endif %}
 
-  {% if file.info.video_info %}
+  {% if file.info.content_info.video %}
     {% include 'files/_video_info.html' %}
   {% endif %}
 
