Addons API usage (#20)
* templates and views for flow addon request-status-results with appdata for extended results representation

* update choices of events

--- a/app/uploadcare/templates/groups/group_info.html
+++ b/app/uploadcare/templates/groups/group_info.html
@@ -14,6 +14,7 @@
             {% if group.info.datetime_stored %}
                 {{ group.info.datetime_stored | date }}
             {% else %}
+                 - - -
                 <a class="btn btn-sm btn-secondary" href="{% url 'group_store' group.id %}">Store</a>
             {% endif %}
         </li>
@@ -44,5 +45,7 @@
             </li>
         {% endif %}
     {% endfor %}
+
+    <a href="{% url 'group_delete' group.id %}" class="btn btn-danger btn-sm">Delete</a>
 
 {% endblock %}
