show stored_datetime in group_info

--- a/app/uploadcare/templates/groups/group_info.html
+++ b/app/uploadcare/templates/groups/group_info.html
@@ -11,8 +11,8 @@
         </li>
         <li class="list-group-item">
             <strong>Datetime stored</strong>:
-            {% if group.info.datetime_stored %}
-                {{ group.info.datetime_stored | date }}
+            {% if group.datetime_stored %}
+                {{ group.datetime_stored | date }}
             {% else %}
                  - - -
                 <a class="btn btn-sm btn-secondary" href="{% url 'group_store' group.id %}">Store</a>
