added save_in_group for multipage documents conversion

--- a/app/uploadcare/templates/conversions/document/request.html
+++ b/app/uploadcare/templates/conversions/document/request.html
@@ -19,6 +19,9 @@
                 <div class="mb-3">
                     {{ form.store|as_crispy_field }}
                 </div>
+                <div class="mb-3">
+                    {{ form.save_in_group|as_crispy_field }}
+                </div>
                 <button class="btn btn-primary" type="submit">Convert</button>
             </form>
         </div>
